--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 
-body{
-    background-color: black;
-}
 
+#hero {
+    background-image: url("../images/background_0.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+}
 .nav{
-    justify-content:center;
+    justify-content:end;
     background-color:black;
     color:white !important;
 
@@ -13,6 +17,15 @@ body{
     height: 25px;
     margin-bottom: 10px !important;
 }
+.hamburger {
+    width:180px ;
+    justify-content: right !important;
+    margin-top: 4px;
+    margin-left:10px;
+}
+.burger{
+    margin-left: 10px;
+}
 
 .nav-link{
     color:white;
@@ -20,9 +33,43 @@ body{
     font-size: 16px;
     font-weight: 700;
 }
-.jumbotron{
-    margin-top: 20px;
+.jumbotron {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:80%;
+    vertical-align: bottom;
+
 }
+
+.jumbotron p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    color: white;
+
+}
+
+.jumbotron h1 {
+    color: white;
+    font-weight: 800;
+
+}
+
+
+.jumbotron h1 span {
+    font-weight: 300;
+
+}
+
+.jumbotron .my-4 {
+    background-color: white;
+}
+
+.arrow{
+    height:100px;
+    width:100px;
+}
+
 .container{
     color:white;
     height:400px;
@@ -40,20 +87,29 @@ body{
 .tape{
     height: 42px;
     position:absolute;
-    bottom:35%;
+    bottom:45%;
     left: 30%;
+}
+
+h3{
+    color:rgb(255, 81, 34);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: large;
+    font-weight: 700;
 }
 
 .grid-container{
     margin-top: 60px;
+    margin-bottom: 60px;
     display:grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap:40px;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap:5px;
     row-gap:65px;
     justify-items: center;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 90px;
+    margin-right: 90px;
 }
+
 .card{
     display:grid;
 }
@@ -79,15 +135,345 @@ body{
 
 }
 
+.grid_2{
+    margin-top: 20px;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: white;
+    background-image: url("../images/background_18.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+
+}
+.grid_3{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: black;
+    background-image: url("../images/background17.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+
+}
+.grid_4{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: white;
+    background-image: url("../images/background_0.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+
+}
+.grid_5{
+    margin-top: 10px;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: black;
+    background-image: url("../images/UI_style.png");
+    max-width:100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+
+}
+
+.grid_6{
+    display:grid;
+    grid-template-columns: 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: black;
+    background-image: url("../images/background_12.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+
+}
+.grid_7{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: black;
+    background-image: url("../images/background_15.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+}
+.grid_8{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: white;
+    background-image: url("../images/background_0.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+
+}
+.grid_9{
+    display:grid;
+    grid-template-columns: 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: black;
+    background-image: url("../images/BACKGROUND_14.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+}
+.grid_10{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:2px;
+    row-gap:7px;
+    justify-items: center;
+    color: white;
+    background-image: url("../images/background_0.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+}
+.grid_11{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap:5px;
+    row-gap:65px;
+    justify-items: center;
+    color: black;
+    background-image: url("../images/background_12.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+    height: 100vh;
+}
+
+
+
+.details{
+    height: 300px;
+    width:300px;
+    justify-content: center;
+    align-content: center;
+}
+
+.describe{
+    margin: auto;
+    width: 80%;
+    font-size: large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 600;
+}
+.discover{
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 150px;
+}
+.card-body{
+    border-left: 40px;
+    line-height: 25px;
+    background-color: black;
+    color: white !important;
+    font-size: large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 600;
+    border-left: 15px solid rgb(255, 81, 34);
+
+}
+
+p{
+padding : 0;
+margin : 0;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-weight: 350;   
+}
+
+
+.light{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 250;   
+    }
+
+.conversation-eg2{
+    display:grid;
+    height:300px;
+    width:500px;
+    background-image: url("../images/conv_13.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 25%;
+    margin-top: 35%;
+    border-left: 20px solid black;
+    box-shadow: 8px 8px whitesmoke;
+}
+
+.conversation-eg1{
+    display:grid;
+    height:300px;
+    width:500px;
+    background-image: url("../images/conv_1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 35%;
+    border-left: 8px solid rgb(206, 229, 238);
+    box-shadow: 8px 8px whitesmoke;
+}
+
+.conversation-eg3{
+    display:grid;
+    height:300px;
+    width:500px;
+    background-image: url("../images/conv_1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 35%;
+    border-left: 20px solid rgb(206, 229, 238);
+    box-shadow: 8px 8px whitesmoke;
+}
+
+.conversation-eg4{
+    display:grid;
+    height:300px;
+    width:500px;
+    background-image: url("../images/conv_2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 35%;
+    border-left: 15px solid rgb(206, 229, 238);
+    box-shadow: 8px 8px whitesmoke;
+}
+
+.conversation-eg5{
+    display:grid;
+    height:500px;
+    width:850px;
+    background-image: url("../images/conv_3.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 6%;
+    border-left: 30px solid rgb(206, 229, 238);
+    box-shadow: 10px 8px whitesmoke;
+}
+
+.conversation-eg6{
+    display:grid;
+    height:270px;
+    width:400px;
+    background-image: url("../images/conv_5.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 6%;
+    margin-left: 25%;
+    margin-top: 3%;
+
+}
+
+.conversation-eg8{
+    display:grid;
+    height:270px;
+    width:400px;
+    background-image: url("../images/conv_6.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 6%;
+    margin-left: 25%;
+    margin-top: 3%;
+
+}
+.conversation-eg7{
+    display:grid;
+    height:270px;
+    width:400px;
+    background-image: url("../images/conv_7.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 3%;
+    margin-right: 25%;
+    margin-bottom: 3%;
+    margin-top: 6%;
+}
+
+.conversation-eg9{
+    display:grid;
+    height:270px;
+    width:400px;
+    background-image: url("../images/conv_8.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 3%;
+    margin-right: 25%;
+    margin-bottom: 3%;
+
+}
+.conversation-eg10{
+    display:grid;
+    height:450px;
+    width:650px;
+    background-image: url("../images/conv_10.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 15%;
+    border-left: 25px solid rgb(206, 229, 238);
+}
+
+.intend{
+    text-indent: 30px;
+}
+
+.footer{
+    flex:1;
+    max-width:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height: 80px;
+    background-color: black;
+}
+.icons {
+    height:45px;
+    width:46px;
+    justify-content: center;
+    margin-left: 15px;
+    margin-bottom: 7px;
+}
+
 @media (max-width:850px){
-    .case-study-grid{
-       grid-template-columns: 1fr;
-   
+    .grid_2,
+    .grid_3,
+    .grid_4,
+    .grid_5,
+    .grid_6,
+    .grid_7,
+    .grid_8{
+     grid-template-columns: 1fr;
     }
    }
 
-@media (min-width:1000px){
-       .case-study-grid{
-           grid-template-columns: 1fr 1fr;
-       }
-   }
